# robot_project

./: README.md  go.sh
daily_report/: report.md
daily_report/6_02/4wheels/: 4wheels.ino
daily_report/6_03/2wheels/: 2wheels.ino
daily_report/6_08/4wheels/: 4wheels.ino  4wheels_OOP.ino
daily_report/6_09/4wheel_advanced/: 4wheel_advanced.ino
daily_report/6_10/src/: talker.cpp
daily_report/6_11/4wheelsROS/: 4wheelsROS.ino
daily_report/6_11/FirstTestOnROS/: FirstTestOnROS.ino
devel/: .catkin
devel/include/amcl/: AMCLConfig.h
devel/include/arduino_pkg/: Num.h
devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelPluginConfig.h
devel/include/count_to_odom/: count2odom.h
devel/include/global_planner/: GlobalPlannerConfig.h
devel/include/vel_to_control/: vel2control.h
devel/lib/amcl/: amcl
devel/lib/base_local_planner/: point_grid
devel/lib/camera_detection/: camera_detection
devel/lib/costmap_2d/: costmap_2d_cloud  costmap_2d_markers  costmap_2d_node
devel/lib/count_to_odom/: count_to_odom  count_to_odomNode
devel/lib/fake_localization/: fake_localization
devel/lib/global_planner/: planner
devel/lib/gmapping/: slam_gmapping  slam_gmapping_replay
install/: .rosinstall  local_setup.sh
launch/: .styx.launch.swp  styx.launch
src/arduino_pkg/: CMakeLists.txt  package.xml
src/count_to_odom/: CMakeLists.txt  package.xml
src/count_to_odom/launch/: count_to_odom.launch
src/count_to_odom/msg/: count2odom.msg
src/count_to_odom/src/: count_to_odom.cpp
src/robot_setup_tf/: CMakeLists.txt  package.xml
src/vel2control/: ._vel2controlNode.cpp  ._vel2controlNode_client.cpp  CMakeLists.txt  package.xml
src/vel2control/launch/: vel2control.launch
src/vel2control/src/: vel2controlNode.cpp  vel2controlNode_client.cpp
src/yadwigha_2dnav/: CMakeLists.txt  base_move.launch  costmap_common_params.yaml  yadwigha.launch
(+238 files in other folders)
